# zigbeeServer

./: .gitignore  README.md  app.py  appConfig.json.migrated  build.py  convertDevices.py  pyproject.toml  sort_devices.py  tuya.db  zigbee_manager.py
templates/: index.html  schedule.html  settings.html
