[project]
name = "tuyaswitchapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.0.0",
    "pyinstaller>=6.15.0",
    "pystray>=0.19.5",
    "tinytuya>=1.15.1",
    "waitress>=3.0.2",
]
