[project]
name = "tuyaswitchapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "pillow>=12.0.0",
    "pyinstaller>=6.15.0",
    "pystray>=0.19.5",
    "waitress>=3.0.2",
    "zigpy>=0.63.0",
    "bellows>=0.39.0",
    "zigpy-znp>=0.12.0",
    "zigpy-deconz>=0.23.0",
    "zigpy-xbee>=0.19.0",
    "zigpy-zigate>=0.12.0",
    "pyserial-asyncio>=0.6",
]
